--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ html {
   font-size: 1.25rem;
   border-radius: 0.5rem;
   background-color: #f8f5223a;
+  cursor: pointer;
 }
 
 /* =======================
